# hoymiles_modbus

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
hoymiles_modbus/: __init__.py  _datatype.py  _modbus_tcp_client.py  client.py  datatypes.py  hoymiles_modbus.py
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_custom_decoder.py  test_custom_framer.py  test_hoymiles_modbus.py  test_packet_data_size_fixer.py  test_pdu_data_size_fixer.py
usage/: index.html
