[tool]
[tool.poetry]
name = "hoymiles_modbus"
version = "0.10.0"
homepage = "https://github.com/wasilukm/hoymiles_modbus"
description = "Gather data from Hoymiles microinverters."
authors = ["Mariusz Wasiluk"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
packages = [
    { include = "hoymiles_modbus" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

black  = {version = "^24.8.0", optional = true}
isort  = { version = "^5.8.0", optional = true}
flake8  = { version = "^7.1.1", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
mypy = {version = "^1", optional = true}
pytest  = { version = "^8.3.2", optional = true}
pytest-cov  = { version = "^5.0.0", optional = true}
tox  = { version = "^4.17.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
mkdocs  = { version = "^1.6.0", optional = true}
mkdocs-include-markdown-plugin  = { version = "^7.1.7", optional = true}
mkdocs-material  = { version = "^9.6.18", optional = true}
mkdocstrings = {version = "^0.27.0", extras = ["python"], optional = true}
mkdocs-material-extensions  = { version = "^1.1.1", optional = true}
twine  = { version = "^5.1.1", optional = true}
mkdocs-autorefs = {version = ">=0.3.1", optional = true}
pre-commit = {version = "^3.8.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
plum-py = "^0.8.0"
pymodbus = "^3.11.0"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
